# embive

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  TRANSPILER.md
.github/workflows/: ci.yml
assets/formats/: README.md  b-type.json  i-type.json  j-type.json  r-type.json  s-type.json  u-type.json
examples/: embassy.rs  gdb_tcp.rs
examples/embassy/: Cargo.toml
examples/embassy/src/: main.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: interpreter.rs  transpiler.rs
src/: engine.rs  error.rs  format.rs  instruction.rs  interpreter.rs  lib.rs  memory.rs  register.rs  registers.rs  transpiler.rs
src/engine/: config.rs  state.rs  syscall.rs
src/instruction/: amo.rs  auipc.rs  branch.rs  embive_macro.rs  format.rs  jal.rs  jalr.rs  load.rs  lui.rs  misc_mem.rs  op.rs  op_imm.rs  riscv_macro.rs  store.rs  system.rs
src/interpreter/: config.rs  debugger.rs  decode_execute.rs  error.rs  memory.rs  registers.rs  state.rs  utils.rs
src/interpreter/debugger/: gdb.rs
src/interpreter/decode_execute/: auipc.rs  branch.rs  compressed.rs  jal.rs  jalr.rs  load_store.rs  lui.rs  op_amo.rs  op_imm.rs  system_misc_mem.rs
src/interpreter/decode_execute/compressed/: addi.rs  addi16sp.rs  addi4spn.rs  and.rs  andi.rs  beqz.rs  bnez.rs  ebreak_jalr_add.rs  j.rs  jal.rs  jr_mv.rs  li.rs  lui.rs  lw.rs  lwsp.rs  or.rs  slli.rs  srai.rs  srli.rs  sub.rs  sw.rs  swsp.rs  xor.rs
src/interpreter/memory/: memory_type.rs
src/interpreter/registers/: control_status.rs  cpu.rs
src/registers/: control_status.rs  cpu.rs
src/transpiler/: convert.rs  error.rs
src/transpiler/convert/: amo.rs  auipc.rs  branch.rs  c0.rs  c1.rs  c2.rs  jal.rs  jalr.rs  load.rs  lui.rs  misc_mem.rs  op.rs  op_imm.rs  store.rs  system.rs
tests/: app.elf  test.elf
tests/riscv/: README.md
tests/riscv/rv32ua/: amoadd_w.elf  amoand_w.elf  amomax_w.elf  amomaxu_w.elf  amomin_w.elf  amominu_w.elf  amoor_w.elf  amoswap_w.elf  amoxor_w.elf  lrsc.elf
tests/riscv/rv32uc/: rvc.elf
tests/riscv/rv32ui/: add.elf  addi.elf  and.elf  andi.elf  auipc.elf  beq.elf  bge.elf  bgeu.elf  blt.elf  bltu.elf  bne.elf  jal.elf  jalr.elf  lb.elf  lbu.elf  lh.elf  lhu.elf  lui.elf  lw.elf  ma_data.elf  or.elf  ori.elf  sb.elf  sh.elf  simple.elf  sll.elf  slli.elf  slt.elf  slti.elf  sltiu.elf  sltu.elf  sra.elf  srai.elf  srl.elf  srli.elf  sub.elf  sw.elf  xor.elf  xori.elf
tests/riscv/rv32um/: div.elf  divu.elf  mul.elf  mulh.elf  mulhsu.elf  mulhu.elf  rem.elf  remu.elf
