[package]
name = "embive"
description = "A lightweight, recoverable sandbox for executing untrusted RISC-V code in constrained environments (ex.: microcontrollers)."
version = "0.2.0"
authors = ["Daniel Stuart <daniel.stuart14@gmail.com>"]
repository = "https://github.com/embive/embive"
documentation = "https://docs.rs/embive"
keywords = ["riscv", "interpreter", "embedding", "sandboxing", "no_std"]
categories = ["no-std", "virtualization", "embedded"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.81"
readme = "README.md"

[dependencies]
elf = { version = "0.7.4", optional = true, default-features = false }

[features]
default = ["transpiler", "interpreter"]
transpiler = ["dep:elf"]
interpreter = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
