[package]
name = "embive"
description = "Embive is an interpreter/virtual-machine that leverages RISC-V bytecode, enabling sandboxed code execution on tiny devices (e.g. microcontrollers)."
version = "0.7.1"
authors = ["Daniel Stuart <daniel.stuart14@gmail.com>"]
repository = "https://github.com/embive/embive"
documentation = "https://docs.rs/embive"
keywords = ["riscv", "interpreter", "embedding", "sandboxing", "no_std"]
categories = ["no-std", "virtualization", "embedded"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.81"
readme = "README.md"

[dependencies]
elf = { version = "0.8.0", optional = true, default-features = false }
gdbstub = { version = "0.7.8", optional = true, default-features = false, features = ["paranoid_unsafe", "core_error"] }
gdbstub_arch = { version = "0.3.2", optional = true }

[dev-dependencies]
embassy-executor = { version = "0.9.1", features = ["arch-std", "executor-thread"] }
embassy-futures = "0.1.2"
log = "0.4.29"
env_logger = "0.11.8"

[features]
default = ["transpiler", "interpreter"]
transpiler = ["dep:elf"]
interpreter = []
async = []
debugger = ["dep:gdbstub", "dep:gdbstub_arch", "interpreter"]
alloc = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "gdb_tcp"
path = "examples/gdb_tcp.rs"
required-features = ["debugger", "transpiler"]

[[example]]
name = "embassy"
path = "examples/embassy.rs"
required-features = ["async", "transpiler", "interpreter"]
